@@ -1,3 +1,10 @@
+2023-08-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-archive-tests.el (tramp-archive-test44-user-group-ids):
+	Extend test.
+
+	* tramp-tests.el (tramp-test47-read-password): Tag it :unstable.
+
 2023-08-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test41-special-characters): Skip for macOS.
